<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavFragments.TeslaRuleFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardEssayImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTesla"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/essay_title_image"
                android:scaleType="fitXY"
                android:src="@drawable/nicolla" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgTesla"
                android:layout_margin="8dp"
                android:text="@string/introTesla" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEssayText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardEssayImage"
        android:layout_margin="8dp"
        android:elevation="8dp"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/firstMethod"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtContent1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtTitle1"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/firstTeslaContent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp" />

            </RelativeLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEssayText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardEssayText1"
        android:layout_margin="8dp"
        android:elevation="8dp"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtTitle2"
                    android:layout_width="match_parent"
                    android:text="@string/secMethod"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtContent2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtTitle2"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/secContentTesla" />

            </RelativeLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>


</RelativeLayout>