<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_the_note">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_input_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textField"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="62dp"
                android:layout_gravity="bottom"
                android:layout_weight="0.5"
                android:backgroundTint="@color/aqua"
                android:text="@string/save"
                app:icon="@drawable/ic_baseline_add_24" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="62dp"
                android:layout_gravity="bottom"
                android:layout_weight="0.5"
                android:backgroundTint="@color/black"
                android:text="@string/cancel"
               />



        </LinearLayout>

    </RelativeLayout>

</FrameLayout>